Build swagger docs before builds, added ldap
