# api/v1/ldap/router.go
@@ -1,0 +1,7 @@
+package ldap
+
+import "github.com/gorilla/mux"
+
+func RegisterRoutes(router *mux.Router) {
+	router.HandleFunc("/query", RunQuery).Methods("POST")
+}
