# docs/swagger.yaml
@@ -106,6 +106,17 @@ definitions:
       requestURL:
         type: string
     type: object
+  files.BulkRenameFilesRequest:
+    properties:
+      nameMap:
+        additionalProperties:
+          type: string
+        type: object
+      path:
+        type: string
+      remote:
+        $ref: '#/definitions/files.RemoteConfiguration'
+    type: object
   files.CheckEqualRequest:
     properties:
       destinationPath:
@@ -330,6 +341,32 @@ definitions:
   fs.Metadata:
     additionalProperties:
       type: string
+    type: object
+  ldap.LdapConnection:
+    properties:
+      baseDN:
+        type: string
+      domain:
+        type: string
+      insecureSkipVerify:
+        type: boolean
+      password:
+        type: string
+      url:
+        type: string
+      username:
+        type: string
+    type: object
+  ldap.LdapQuery:
+    properties:
+      attributes:
+        items:
+          type: string
+        type: array
+      connection:
+        $ref: '#/definitions/ldap.LdapConnection'
+      query:
+        type: string
     type: object
   operations.ListJSONItem:
     properties:
@@ -1016,6 +1053,38 @@ paths:
       summary: Remove Directories
       tags:
       - files
+  /api/v1/files/rename:
+    post:
+      consumes:
+      - application/json
+      description: Bulk Rename Files
+      parameters:
+      - description: Remote Configuration
+        in: body
+        name: remote
+        required: true
+        schema:
+          $ref: '#/definitions/files.BulkRenameFilesRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Bulk Rename Files
+      tags:
+      - files
   /api/v1/files/sync:
     post:
       consumes:
@@ -1229,4 +1298,37 @@ paths:
             additionalProperties: true
             type: object
       summary: Make a GET Request
+  /ldap/query:
+    post:
+      consumes:
+      - application/json
+      description: Run LDAP Query
+      parameters:
+      - description: Query
+        in: body
+        name: query
+        required: true
+        schema:
+          $ref: '#/definitions/ldap.LdapQuery'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              additionalProperties: true
+              type: object
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Run LDAP Query
+      tags:
+      - ldap
 swagger: "2.0"
